--- a/index.html
+++ b/index.html
@@ -23,384 +23,10 @@
 ">
 <meta name="author" content="مدرسة خالد بن الوليد الثانوية">
 <meta name="robots" content="index, follow">
- 
-<link rel="stylesheet" href="style.css">
-  <!-- خط عربي -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <!-- خط عربي -->
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
-
-<script src="script.js">
-function updateThemeButton(){
-  const btn = document.getElementById("themeBtn");
-  if(!btn) return;
-
-  if(document.body.classList.contains("dark")){
-    btn.textContent = "☀️";
-  }else{
-    btn.textContent = "🌙";
-  }
-}
-
-function applySystemTheme(){
-  const prefersDark = window.matchMedia("(prefers-color-scheme: dark)").matches;
-
-  if(prefersDark){
-    document.body.classList.add("dark");
-  }else{
-    document.body.classList.remove("dark");
-  }
-
-  updateThemeButton();
-}
-
-function toggleDarkMode(){
-  document.body.classList.toggle("dark");
-
-  if(document.body.classList.contains("dark")){
-    localStorage.setItem("theme","dark");
-  }else{
-    localStorage.setItem("theme","light");
-  }
-
-  updateThemeButton();
-}
-
-/* ===== أولوية الاختيار ===== */
-/* 1️⃣ إذا المستخدم اختار يدوي */
-if(localStorage.getItem("theme")){
-  if(localStorage.getItem("theme")==="dark"){
-    document.body.classList.add("dark");
-  }
-}else{
-  /* 2️⃣ إذا ما اختار → حسب الجهاز */
-  applySystemTheme();
-}
-
-/* تحديث الزر */
-updateThemeButton();
-
-/* إذا الجهاز غير وضعه أثناء التصفح */
-window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", e => {
-  if(!localStorage.getItem("theme")){
-    applySystemTheme();
-  }
-});
-</script>
-
-<style>
-      :root{
-      --bg:#f4f6f8;
-      --card:#e8e8e8;
-      --text:#1e293b;
-      --muted:#64748b;
-
-      --primary:#1f6f8b;      /* أزرق تركوازي */
-      --secondary:#2ea3c6;    /* أزرق فاتح */
-      --gold:#f4b400;         /* أصفر ذهبي */
-      --dark:#222222;
-
-      --border:rgba(0,0,0,.08);
-      --shadow:0 12px 30px rgba(0,0,0,.08);
-      --radius:16px;
-    }
-
-    *{box-sizing:border-box}
-    /* ===== انتقال ناعم بين الوضعين ===== */
-*{
-  transition:
-    background-color .4s ease,
-    color .4s ease,
-    border-color .4s ease,
-    box-shadow .4s ease;
-}
-
-html{
-  scroll-behavior:smooth;
-}
-
-body{
-  transition: background-color .4s ease, color .4s ease;
-}
-
-body{
-  margin:0;
-  font-family:"Cairo",sans-serif;
-  background:
-    radial-gradient(900px 500px at 10% 0%, rgba(46,163,198,.12), transparent 60%),
-    radial-gradient(900px 500px at 90% 10%, rgba(244,180,0,.12), transparent 60%),
-    var(--bg);
-  color:var(--text);
-  line-height:1.9;
-}
-
-    /* ✅ الصفحة كاملة (بدون حصر بالوسط) */
-  .container{
-  width:100%;
-  padding:0 22px;
-  } /* بس مسافة جانبية بسيطة */
-
-
-    /* ✅ Header صغير وعادي + خلفية */
-header{
-  padding:20px 0;
-}
-
-.hero{
-  width:100%;
-  min-height:300px;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
-  align-items:center;
-
-  background:
-    linear-gradient(rgba(0,0,0,.4), rgba(0,0,0,.66)),
-    url("img.jpg");
-
-  background-size:cover;
-  background-position:center;
-  background-repeat:no-repeat;
-
-  padding:50px 20px;
-  border-radius:20px;
-  box-shadow:var(--shadow);
-  text-align:center;
-  color:#fff;
-}
-
-.hero img {
-  height: 10px;
-}
-
-.hero h1{
-  font-size:70px;
-  margin:0;
-  font-weight:900;
-  font-family: Amiri, serif;
-}
-
-.hero p{
-  font-size:18px;
-  margin-top:12px;
-  opacity:.95;
-}
-
-    /* Navigation */
-    nav{
-      display:flex;
-      justify-content:center;
-      gap:15px;
-      margin:16px 0;
-      flex-wrap:wrap;
-    }
-
-    nav a{
-      text-decoration:none;
-      padding:10px 18px;
-      border-radius:30px;
-      background:var(--card);
-      border:1px solid var(--border);
-      color:var(--text);
-      font-weight:700;
-      transition:.3s;
-    }
-
-    nav a:hover{
-      background:var(--primary);
-      color:#fff;
-    }
-
-    /* Sections */
-    section{
-      background:var(--card);
-      padding:20px;
-      margin:20px 0;
-      border-radius:var(--radius);
-      border:1px solid var(--border);
-      box-shadow:var(--shadow);
-    }
-
-    section h2{
-      margin:0 0 15px;
-      color:var(--gold);
-    }
-
-    /* Lessons */
-    .lesson{
-      background:#f9fafb;
-      padding:15px;
-      border-radius:12px;
-      margin-bottom:15px;
-      border:1px solid var(--border);
-    }
-
-    .lesson h3{
-      margin-top:0;
-      color:var(--primary);
-    }
-
-    /* Grammar */
-    .rules{
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(400px,1fr));
-      gap:25px;
-    }
-
-    .rule{
-      background:#f9fafb;
-      padding:15px;
-      border-radius:12px;
-      border:1px solid var(--border);
-    }
-
-    .rule h4{
-      margin:0 0 8px;
-      color:var(--gold);
-    }
-
-    .example{
-      background:rgba(31,111,139,.10);
-      padding:10px;
-      border-radius:10px;
-      margin-top:8px;
-    }
-
-    /* Encyclopedias */
-    .ency-grid{
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-      gap:15px;
-    }
-
-    .ency-card{
-      background:#f9fafb;
-      padding:15px;
-      border-radius:12px;
-      border:1px solid var(--border);
-      text-decoration:none;
-      color:var(--text);
-      transition:.3s;
-      display:block;
-    }
-
-    .ency-card:hover{
-      background:var(--primary);
-      color:#fff;
-      transform:translateY(-3px);
-    }
-
-    .tag{
-      font-size:12px;
-      background:var(--gold);
-      color:#000;
-      padding:3px 8px;
-      border-radius:20px;
-      display:inline-block;
-      margin-top:6px;
-    }
-
-    /* Library */
-    .library{
-      display:grid;
-      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
-      gap:15px;
-    }
-
-    .lib-item{
-      background:#f9fafb;
-      padding:15px;
-      border-radius:12px;
-      border:1px solid var(--border);
-      text-decoration:none;
-      color:var(--text);
-      transition:.3s;
-      display:block;
-    }
-
-    .lib-item:hover{
-      background:var(--primary);
-      color:#fff;
-    }
-
-    /* Footer */
-    footer{
-      text-align:center;
-      padding:15px;
-      margin-top:30px;
-      background:#1f2937;
-      border-radius:15px;
-      color:#fff;
-    }
-
-    footer img {
-      width: 100px;
-      border-radius: 50%;
-      border: solid 2px white;
-      transition: 0.2s;
-    }
-    
-    footer img:hover{
-     box-shadow: 0 0 10px white ;
-    }
-
-
-    /* ===== زر الوضع الداكن ===== */
-.dark-toggle{
-  position:fixed;
-  top:20px;
-  left:20px;
-  width:45px;
-  height:45px;
-  border-radius:50%;
-  border:none;
-  background:var(--primary);
-  color:#fff;
-  font-size:20px;
-  cursor:pointer;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  box-shadow:0 5px 15px rgba(0,0,0,.2);
-  z-index:9999;
-}
-
-/* ===== ألوان الوضع الداكن ===== */
-body.dark{
-  --bg:#0f172a;
-  --card:#1e293b;
-  --text:#f1f5f9;
-  --muted:#94a3b8;
-  --border:rgba(255,255,255,.08);
-}
-
-body.dark section,
-body.dark .lesson,
-body.dark .rule,
-body.dark .lib-item,
-body.dark .ency-card{
-  background:#1e293b;
-  color:#f1f5f9;
-}
-
-body.dark nav a{
-  background:#1e293b;
-  color:#f1f5f9;
-}
-
-body.dark nav a:hover{
-  background:var(--secondary);
-  color:#fff;
-}
-
-body.dark footer{
-  background:#0f172a;
-}
-</style>
 
 <body>
   <header class="container">
@@ -647,9 +273,8 @@ body.dark footer{
       <img src="logo.png" alt="logo">
       <p>&copy; 2026 مدرسة خالد بن الوليد الثانوية للبين - لواء الموقر - جميع الحقوق محفوظة.</p>
     </footer>
-
   </main>
-
-
+<link rel="stylesheet" href="/style.css">
+<script src="/script.js"></script>
 </body>
 </html>
