--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 ">
 <meta name="author" content="مدرسة خالد بن الوليد الثانوية">
 <meta name="robots" content="index, follow">
-   <!-- خط عربي -->
+ 
+<link rel="stylesheet" href="style.css">
+  <!-- خط عربي -->
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
@@ -274,7 +276,6 @@
       <p>&copy; 2026 مدرسة خالد بن الوليد الثانوية للبين - لواء الموقر - جميع الحقوق محفوظة.</p>
     </footer>
   </main>
-<link rel="stylesheet" href="/style.css">
-<script src="/script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
