--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
 ">
 <meta name="author" content="مدرسة خالد بن الوليد الثانوية">
 <meta name="robots" content="index, follow">
- 
-<link rel="stylesheet" href="style.css">
   <!-- خط عربي -->
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Amiri:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
@@ -34,7 +32,7 @@
   <header class="container">
     <div class="hero">
       <img src="img.jpg" alt="">
-      <h1>منصة الفصاحة</h1>
+      <h1>منصة الخرااا</h1>
       <p>دروس منظمة — شرح مبسّط للقواعد — مكتبة PDF مفيدة للطلاب</p>
     </div>
   </header>
@@ -276,6 +274,8 @@
       <p>&copy; 2026 مدرسة خالد بن الوليد الثانوية للبين - لواء الموقر - جميع الحقوق محفوظة.</p>
     </footer>
   </main>
+  
+<link rel="stylesheet" href="style.css">
 <script src="script.js"></script>
 </body>
 </html>
